# FluxQ

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  codex_execution_prompt.md  mypy.ini  pyproject.toml  quantum_runtime_cli_build_plan.md
.agents/skills/fluxq-cli/: SKILL.md  (+1 more)
.github/workflows/: ci.yml  classiq.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: agent-ci-adoption.md  aionrs-integration.md  fluxq-qaoa-maxcut-case-study.md  product-strategy.md  versioning.md
docs/plans/: 2026-04-02-cli-followup-plan.md  2026-04-02-compare-policy-guardrails.md  2026-04-02-pr1-scaffold.md  2026-04-02-product-roadmap.md  2026-04-02-revision-artifact-snapshots.md  2026-04-03-batch-a-baseline-workflows.md  2026-04-03-batch-b-target-aware-benchmarks.md  2026-04-03-batch-c-parameterized-workflows.md  2026-04-03-compare-replay-trust.md  2026-04-03-execution-team.md  2026-04-03-post-v0.2-feature-roadmap.md  2026-04-03-product-release-surface.md  2026-04-03-release-surface-polish.md  2026-04-03-replay-integrity-guardrails.md  2026-04-03-v0.2.0-release-prep.md  2026-04-08-runtime-consistency-patch.md  2026-04-10-v0.2.3-release-surface.md
docs/releases/: v0.2.0.md  v0.2.3.md  v0.2.4.md  v0.3.0.md  v0.3.1.md
examples/: intent-ghz.md  intent-qaoa-maxcut-sweep.md  intent-qaoa-maxcut.md
integrations/aionrs/: CLAUDE.md.example  hooks.example.toml
integrations/cc-connect/: README.md  config.toml.example  lark_cli_bridge.py
scripts/: dev-bootstrap.sh
src/quantum_runtime/: __init__.py  artifact_provenance.py  cli.py  errors.py
tests/: test_aionrs_assets.py  test_artifact_provenance.py  test_benchmark.py  test_cc_connect_gateway.py  test_classiq_backend.py  test_classiq_emitter.py  test_claw_launcher.py  test_cli_backend_list.py  test_cli_baseline.py  test_cli_bench.py  test_cli_compare.py  test_cli_control_plane.py  test_cli_doctor.py  test_cli_exec.py  test_cli_export.py  test_cli_ibm_config.py  test_cli_ingress_resolution.py  test_cli_init.py  test_cli_inspect.py  test_cli_observability.py  test_cli_pack_import.py  test_cli_remote_submit.py  test_cli_runtime_gap.py  test_cli_workspace_safety.py  test_diagnostics.py  test_intent_parser.py  test_lark_cli_bridge.py  test_open_source_release.py  test_pack_bundle.py  test_packaging_release.py  test_planner.py  test_qasm_export.py  test_qiskit_emitter.py  test_qspec_semantics.py  test_qspec_validation.py  test_release_docs.py  test_report_writer.py  test_runtime_adoption_workflow.py  test_runtime_compare.py  test_runtime_imports.py  (+10 more)
tests/golden/: classiq_ghz_main.py  qasm_ghz_main.qasm  qiskit_ghz_main.py  qspec_ghz.json  qspec_hardware_efficient_ansatz.json  qspec_qaoa_maxcut.json  report_summary_ghz.txt
(+200 files in other folders)
